remove post and add get instead
